# ReveilLib

./: .clang-tidy  .gitignore  .gitmodules  AxisLabelSpecs_8hpp_source.html  BorderSpecs_8hpp_source.html  CMakeLists.txt  Canvas_8hpp_source.html  ColumnIndex_8hpp_source.html  Constants_8hpp_source.html  Default_8hpp_source.html  DepthSpecsOf_8hpp_source.html  Doxyfile  Doxyfile.bak  DrawSpecs_8hpp_source.html  Enums_8hpp_source.html  Figure_8hpp_source.html  FillSpecsOf_8hpp_source.html  FillStyleSpecs_8hpp_source.html  FilledCurvesSpecsOf_8hpp_source.html  FontSpecsOf_8hpp_source.html  FrameSpecsOf_8hpp_source.html  GridSpecsBase_8hpp_source.html  GridSpecs_8hpp_source.html  HistogramStyleSpecs_8hpp_source.html  LICENSE  LabelSpecs_8hpp_source.html  LayoutSpecs_8hpp_source.html  LegendSpecs_8hpp_source.html  LineSpecsOf_8hpp_source.html  Makefile  OffsetSpecsOf_8hpp_source.html  Palettes_8hpp_source.html  Plot2D_8hpp_source.html  Plot3D_8hpp_source.html  Plot_8hpp_source.html  PointSpecsOf_8hpp_source.html  ShowSpecsOf_8hpp_source.html  Specs_8hpp_source.html  StringOrDouble_8hpp_source.html  Style.md  (+1935 more)
docs/: home.md
html/: annotated_dup.js  api_8h__dep__incl.dot  api_8h__incl.dot  classrev_1_1ConstantMotion__coll__graph.dot  classrev_1_1Correction.js  classrev_1_1Correction__inherit__graph.dot  classrev_1_1Motion.js  classrev_1_1Motion__inherit__graph.dot  classrev_1_1NoCorrection.js  classrev_1_1NoCorrection__coll__graph.dot  classrev_1_1PilonsCorrection__inherit__graph.dot  classrev_1_1ProportionalMotion.js  classrev_1_1ProportionalMotion__coll__graph.dot  dir_009fe031f60eed5ad788675b101a2a61.js  dir_07a4a52a642fc3103867ef88d4a921d7.js  dir_2431a4ea034a3ccc00cd0f32d9b0469c.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_ab84ae06a684c3bfc1ad7871368688c5.js  dir_addbd9809464404c01939354268bf724.js  dir_af0d36851773fd808346376de396df21.js  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f58994e7b864e76363834b9280c4c3b3.js  dir_fcd40c2aa93fb5db9211b93153b65a80.js  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  inherit_graph_5.dot  inherit_graph_6.dot  inherit_graph_7.dot  main_8h__incl.dot  menudata.js  navtreedata.js  navtreeindex0.js  structOdometryState__coll__graph.dot  structrev_1_1OdometryState__coll__graph.dot  structrev_1_1Velocity.js
include/: distance_reset.hh  mecanum_PID.hh  mecanum_alg.hh  mecanum_odom45.hh  mecanum_util.hh  robot-config.hh  robot-control.hh  sciplot
latex/: annotated.tex  api_8h.tex  api_8h.tex.tmp  api_8h__dep__incl.dot  api_8h__incl.dot  classChassis.tex  classCorrection.tex  classMotion.tex  classMyLibrary_1_1Example.tex  classMyLibrary_1_1Example__inherit__graph.dot  classMyLibrary_1_1SubclassExample.tex  classMyLibrary_1_1SubclassExample__coll__graph.dot  classOdometry.tex  classrev_1_1Chassis.tex  classrev_1_1ConstantMotion.tex  classrev_1_1ConstantMotion__inherit__graph.dot  classrev_1_1Correction.tex  classrev_1_1Correction__inherit__graph.dot  classrev_1_1Motion.tex  classrev_1_1Motion__inherit__graph.dot  classrev_1_1NoCorrection.tex  classrev_1_1NoCorrection__coll__graph.dot  classrev_1_1Odometry.tex  (+22 more)
(+683 files in other folders)
